--- a/ToDoFinalApp/Base.lproj/Main.storyboard
+++ b/ToDoFinalApp/Base.lproj/Main.storyboard
@@ -6,6 +6,107 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="BPE-G7-gW6">
+            <objects>
+                <viewController id="UUV-PC-rQN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bTA-2P-ji4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Roh-Yf-qM7"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="OD4-FR-smj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="28k-v1-iN2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="302"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="ONY-ux-UDp">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="slI-SL-aMX" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7dX-Sl-6bg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="PIC-6a-Nv0">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PIC-6a-Nv0" id="hl3-92-1Nz">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="a9Q-CG-yCY" kind="showDetail" identifier="ShowGoal" id="SQ5-x2-dYA"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="slI-SL-aMX" id="dIM-aQ-dh2"/>
+                            <outlet property="delegate" destination="slI-SL-aMX" id="8SF-TH-Peo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="FFn-Hd-QvM"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tMb-OY-iFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1025" y="-438"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2f0-yi-pyA">
+            <objects>
+                <navigationController id="rEo-1n-O0R" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kke-VN-OEI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="slI-SL-aMX" kind="relationship" relationship="rootViewController" id="3H4-gl-vfH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9n1-gD-4Bt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="73" y="-438"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="bLk-Lq-Ihw">
+            <objects>
+                <splitViewController id="tVE-9I-h1T" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="rEo-1n-O0R" kind="relationship" relationship="masterViewController" id="h8t-bt-ky8"/>
+                        <segue destination="a9Q-CG-yCY" kind="relationship" relationship="detailViewController" id="puc-oJ-hiX"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mmz-FO-Fek" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-879" y="-106"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zSc-VQ-n5E">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a9Q-CG-yCY" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QqS-ci-wf6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UUV-PC-rQN" kind="relationship" relationship="rootViewController" id="fXY-v2-mc7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Olt-fZ-HBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="47" y="302"/>
+        </scene>
+    </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="SQ5-x2-dYA"/>
+    </inferredMetricsTieBreakers>
 </document>
