Added Task and Goal VC and Swift Files

--- a/ToDoFinalApp/Base.lproj/Main.storyboard
+++ b/ToDoFinalApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tVE-9I-h1T">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,36 +10,72 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Task View Controller-->
         <scene sceneID="BPE-G7-gW6">
             <objects>
-                <viewController id="UUV-PC-rQN" sceneMemberID="viewController">
+                <viewController id="UUV-PC-rQN" customClass="TaskViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bTA-2P-ji4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6by-z1-a5L">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskCell" rowHeight="68" id="rep-B6-r23">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="68"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rep-B6-r23" id="a5c-hc-E6N">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="67.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ym-T2-A5v">
+                                                    <rect key="frame" x="38" y="3" width="42" height="61.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="6Ym-T2-A5v" firstAttribute="centerY" secondItem="a5c-hc-E6N" secondAttribute="centerY" id="Ujx-Ss-xu6"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6Ym-T2-A5v" secondAttribute="trailing" constant="20" symbolic="YES" id="gTI-eK-cbe"/>
+                                                <constraint firstItem="6Ym-T2-A5v" firstAttribute="top" secondItem="a5c-hc-E6N" secondAttribute="topMargin" constant="-8" id="ov7-Ue-DDa"/>
+                                                <constraint firstItem="6Ym-T2-A5v" firstAttribute="leading" secondItem="a5c-hc-E6N" secondAttribute="leadingMargin" constant="23" id="y93-a7-qGp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Roh-Yf-qM7" firstAttribute="trailing" secondItem="6by-z1-a5L" secondAttribute="trailing" id="WH7-ki-XLb"/>
+                            <constraint firstItem="Roh-Yf-qM7" firstAttribute="bottom" secondItem="6by-z1-a5L" secondAttribute="bottom" id="k01-YL-lSw"/>
+                            <constraint firstItem="6by-z1-a5L" firstAttribute="top" secondItem="Roh-Yf-qM7" secondAttribute="top" id="wjA-3B-6wT"/>
+                            <constraint firstItem="6by-z1-a5L" firstAttribute="leading" secondItem="Roh-Yf-qM7" secondAttribute="leading" id="yVE-fh-bQa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Roh-Yf-qM7"/>
                     </view>
-                    <navigationItem key="navigationItem" id="OD4-FR-smj"/>
+                    <navigationItem key="navigationItem" title="Task View Controller" id="OD4-FR-smj"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="28k-v1-iN2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1025" y="302"/>
+            <point key="canvasLocation" x="1024.8" y="301.79910044977515"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Goals View Controller-->
         <scene sceneID="ONY-ux-UDp">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="slI-SL-aMX" sceneMemberID="viewController">
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="slI-SL-aMX" customClass="GoalsViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7dX-Sl-6bg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="PIC-6a-Nv0">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GoalCell" rowHeight="66" id="PIC-6a-Nv0">
+                                <rect key="frame" x="0.0" y="28" width="375" height="66"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PIC-6a-Nv0" id="hl3-92-1Nz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="65.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -52,11 +88,11 @@
                             <outlet property="delegate" destination="slI-SL-aMX" id="8SF-TH-Peo"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="FFn-Hd-QvM"/>
+                    <navigationItem key="navigationItem" title="Goals View Controller" id="FFn-Hd-QvM"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tMb-OY-iFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1025" y="-438"/>
+            <point key="canvasLocation" x="1024.8" y="-438.53073463268368"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2f0-yi-pyA">
@@ -107,6 +143,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="SQ5-x2-dYA"/>
+        <segue reference="puc-oJ-hiX"/>
     </inferredMetricsTieBreakers>
 </document>
